# mkdriver

./: .gitignore  .gitmodules  AUDIT.md  CHANGES.md  CLAUDE_CODE_PROMPTS.md  HANDOFF.md  MKW_RL_SPEC.md  README.md  SETUP.md  pyproject.toml
configs/: bc.yaml  btr.yaml
data/: track_metadata.yaml
docs/: PIVOT_2026-04-17.md  PREFLIGHT.md  REGION_DECISION.md  SAVESTATE_PROTOCOL.md  TRAINING_METHODOLOGY.md
runs_backup_20260423/: btr_20260423_000636.csv  luigi_4env_20260423_022252.csv  luigi_prod_1env_20260423_013101.csv  luigi_prod_20260423_003836.csv  luigi_prod_2env_20260423_012611.csv  reboot_smoke_20260423_021240.csv  shakedown_bs64_20260423_231645.csv  smoke2_20260423_021612.csv  smoke_multi_20260423_010301.csv
scripts/: REPLAY_PROTOCOL.md  capture_demo.md  eval_bc.py  eval_btr.py  inspect_savestates.py  memory_probe.py  parse_demo.py  preflight.py  record_savestates.py  replay_demo.py  sanity_check.py  setup_dolphin_instances.py  smoke_env.py  train_bc.py  train_btr.py
src/mkw_rl/: __init__.py
src/mkw_rl/bc/: __init__.py  eval.py  model.py  train.py
src/mkw_rl/dtm/: __init__.py  action_encoding.py  dataset.py  frames.py  pairing.py  parser.py  viz.py
src/mkw_rl/env/: __init__.py  dolphin_env.py  dolphin_script.py  reward.py  track_meta.py
src/mkw_rl/rl/: __init__.py  model.py  networks.py  replay.py  track_sampler.py  train.py
src/mkw_rl/utils/: config.py  logging.py
tests/: test_action_encoding.py  test_bc_eval.py  test_bc_model.py  test_bc_training.py  test_btr_components.py  test_btr_model.py  test_btr_training.py  test_dataset.py  test_dtm_parser.py  test_env_smoke.py  test_pairing.py  test_parse_demo.py  test_pipeline_smoke.py  test_track_sampler.py
