[project]
name = "mkw-rl"
version = "0.1.0"
description = "Behavioral cloning + RL agent for Mario Kart Wii via the Dolphin emulator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.3",
    "torchvision>=0.18",
    "numpy>=1.26",
    "pillow>=10",
    "pyyaml>=6",
    "mss>=9",
    "pygame>=2.5",
    "gymnasium>=1.0",
    "stable-baselines3>=2.3",
    "opencv-python>=4.9",
    "tqdm>=4.66",
    "wandb>=0.16",
    "imageio[ffmpeg]>=2.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# PyTorch CUDA build selection.
#
# Linux hosts (Vast.ai) resolve torch from PyPI's default wheel which is
# compiled against the latest CUDA (13.x at the time of writing), requiring
# driver 13+. Rental hosts typically ship driver 12.8 → the default wheel
# fails with "CUDA initialization: NVIDIA driver too old." Pin the Linux
# torch source to PyTorch's cu128 index so we get a CUDA 12.8-compatible
# build (supports Blackwell sm_120 for RTX 5080 + 5090).
#
# macOS / Windows fall through to the default PyPI index (CPU/MPS wheels,
# no CUDA requirement).
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[tool.hatch.build.targets.wheel]
packages = ["src/mkw_rl"]

[tool.ruff]
line-length = 110
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N"]
ignore = [
    "E501",
    "N812",
    "N806",  # B, T, H, W are conventional ML variable names (batch, time, height, width)
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
