[project]
name = "mkw-rl"
version = "0.1.0"
description = "Behavioral cloning + RL agent for Mario Kart Wii via the Dolphin emulator"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "torch>=2.3",
    "torchvision>=0.18",
    "numpy>=1.26",
    "pillow>=10",
    "pyyaml>=6",
    "mss>=9",
    "pygame>=2.5",
    "gymnasium>=1.0",
    "stable-baselines3>=2.3",
    "opencv-python>=4.9",
    "tqdm>=4.66",
    "wandb>=0.16",
    "imageio[ffmpeg]>=2.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
]
# CUDA runtime libraries that torch 2.11+cu128 dlopens but doesn't pull as a
# hard dep. Required for `import torch` + `import torch.backends.cudnn` to
# succeed on Linux/CUDA hosts. Empirically confirmed on Vast.ai 5080 box
# (2026-04-22) — default uv sync misses these and each produces either
# `ImportError: lib*.so.N` at import or `cuDNN version incompatibility` at
# first LSTM/conv CUDA forward.
#
# IMPORTANT: the system-installed cuDNN on Vast.ai's PyTorch template is an
# older version (typically 9.8) and wins on LD_LIBRARY_PATH over the bundled
# one. You must prepend the bundled cuDNN lib path:
#
#     export LD_LIBRARY_PATH=$VIRTUAL_ENV/lib/python3.13/site-packages/nvidia/cudnn/lib:$LD_LIBRARY_PATH
#
# This is baked into the Vast.ai runbook's .bashrc + launch scripts.
linux-cuda = [
    # nvidia-cudnn-cu12 is a transitive dep of torch (pinned to 9.19.0.56
    # for torch 2.11+cu128). Do NOT re-pin here — it'd conflict with torch's
    # exact version lock. But the shell LD_LIBRARY_PATH caveat above still
    # applies, because Vast.ai hosts ship an older system cudnn.
    "nvidia-cusparselt-cu12>=0.5; sys_platform == 'linux'",
    "nvidia-nvshmem-cu12>=3.6; sys_platform == 'linux'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# PyTorch CUDA build selection.
#
# Linux hosts (Vast.ai) resolve torch from PyPI's default wheel which is
# compiled against the latest CUDA (13.x at the time of writing), requiring
# driver 13+. Rental hosts typically ship driver 12.8 → the default wheel
# fails with "CUDA initialization: NVIDIA driver too old." Pin the Linux
# torch source to PyTorch's cu128 index so we get a CUDA 12.8-compatible
# build (supports Blackwell sm_120 for RTX 5080 + 5090).
#
# macOS / Windows fall through to the default PyPI index (CPU/MPS wheels,
# no CUDA requirement).
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[tool.hatch.build.targets.wheel]
packages = ["src/mkw_rl"]

[tool.ruff]
line-length = 110
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N"]
ignore = [
    "E501",
    "N812",
    "N806",  # B, T, H, W are conventional ML variable names (batch, time, height, width)
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
